tests/programs/invalid/throws.java
public class throws {
  public A() {}
  public int m() throws java.lang.Exception {
    return 42;
  }
}